# food.get

./: .gitignore  README.md  pyproject.toml
food.get/data/: census_relationship.ipynb  cleanup.py  cleanup_sg.py  data_extract.py  data_extract_sg.py
food.get/ui/: food_map.ipynb
food_get/: __main__.py
food_get/analysis/: agg_metrics.ipynb  agg_metrics.py  generate_metric.py
food_get/data/: census_2022.csv  census_data_pull.py  census_relationship.ipynb  cleanup.py  cleanup_grocery.py  cleanup_sg.py  cook_county_2022.csv  data_extract.py  data_extract_census.ipynb  data_extract_census.py  data_extract_census_relationship.ipynb  data_extract_sg.py  extract_atlas.py  extract_census.py  extract_grocery.py  extract_tracts.py  filtered_atlas.csv  filtered_atlas_update.csv  illinois_2022.csv  match_groceries.ipynb  match_groceries.py  state_fips.json
food_get/data/import_data/: Atlas2010.csv  Atlas2015.csv  Atlas2019.csv  illinois_counties_guide.csv  snap_retailers_data.csv
food_get/data/raw_data/: chi_ct_2020.csv  lake_m.json
food_get/tests/: test_census_pull.py
food_get/ui/: dash.py  folium_map.html  food_map.ipynb  map.py  project_dash.py
