[tool.poetry]
name = "food.get"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "food_get"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.1"
requests = "^2.28.1"
ipython = "^8.7.0"
pytest = "^7.2.0"
cssselect = "^1.2.0"
geopandas = "^0.14.3"
jupyter = "^1.0.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
plotly = "^5.18.0"
folium = "^0.15.1"
ipykernel = "^6.29.2"
ruff = "^0.2.2"
dash = "^2.15.0"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"